# GLUSAP

./: README.md
GLUSAP/: README.md  pyproject.toml
GLUSAP/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
GLUSAP/catboost_info/learn/: events.out.tfevents
GLUSAP/notebooks/: 00_initial_idea.ipynb  01_ohiodataset_proves.ipynb  02_SARIMA_simglucose.ipynb  03_local_models.ipynb  03_local_modelsv2.ipynb  04_LSTM.ipynb  05_ARIMA.ipynb  07_patterns.ipynb
GLUSAP/src/: __init__.py  app.py  data_loader.py  main.py  report_dades.py  report_dades_reals.py  simulation.py
GLUSAP/src/models/: model_lstm.py  model_sarimax.py  model_seasonalnaive.py
