[tool.poetry]
name = "glusap"
version = "0.1.0"
description = ""
authors = ["Danae <danae.canillas@dataspurs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
simglucose = "^0.2.11"
catboost = "^1.2.7"
scikit-learn = "^1.5.2"
nixtla = "^0.6.1"
statsforecast = "^1.7.8"
pmdarima = "^2.0.4"
gluonts = "^0.15.1"
mxnet = "^1.9.1"
streamlit = "^1.40.1"
tslearn = "^0.6.3"
dash = "^2.18.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
